# autotiling

./: .gitignore  CHANGELOG  CHANGELOG.md  Makefile  README.md  autotiling  autotiling.py  setup.cfg
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
autotiling/: __about__.py  __init__.py  main.py
