[metadata]
name = autotiling
version = 1.3
author = Piotr Miller
author_email = nwg.piotr@gmail.com
description = Automatically switch the horizontal/vertical window split orientation in i3 and sway
url = https://github.com/nwg-piotr/autotiling
project_urls =
    Code=https://github.com/nwg-piotr/autotiling
    Issues=https://github.com/nwg-piotr/autotiling/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    i3ipc
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel


[options.entry_points]
console_scripts =
    autotiling = autotiling.main:main
